--- a/package.json
+++ b/package.json
@@ -25,20 +25,20 @@
     "i18n-js": "^4.5.1",
     "mobx": "^6.13.7",
     "mobx-react": "^9.2.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-native": "0.79.5",
-    "react-native-safe-area-context": "^5.4.0",
-    "react-native-screens": "~4.11.1",
-    "react-native-web": "^0.20.0"
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-native": "^0.80.2",
+    "react-native-safe-area-context": "^5.6.0",
+    "react-native-screens": "^4.13.1",
+    "react-native-web": "^0.21.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
-    "@types/react": "~19.0.10",
+    "@types/react": "^19.1.9",
     "@types/react-native": "^0.72.8",
     "babel-plugin-module-resolver": "^5.0.2",
-    "jest": "^29.4.0",
-    "typescript": "~5.8.3"
+    "jest": "^30.0.5",
+    "typescript": "^5.9.2"
   },
   "private": true
 }
